# Comfyui_segformer_b2_clothes

./: README.md  __init__.py  pyproject.toml  requirements.txt  segformer_b2_clothes.py  segformer_b3_fashion.py
checkpoints/: checkpoint.txt
